--- a/assign3/8-charts.html
+++ b/assign3/8-charts.html
@@ -11,7 +11,8 @@
     />
     <style>
       section {
-        height: 500px;
+        height: 80vh;
+        min-height: 500px;
       }
     </style>
   </head>
